src/objects/MCAR_Claim__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <formula>MCARs__r.MCAR_NSN_Code__r.Name</formula>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_PPM__c</fullName>
        <formula>MCARs__r.MCAR_Defect_PPM__c</formula>
        <label>Defect PPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Containment_Hours__c</fullName>
        <formula>MCARs__r.MCAR_Exp_Cont_Hrs__c</formula>
        <label>Expected Containment Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Number_Date_Code__c</fullName>
        <formula>MCARs__r.MCAR_Lot_Nbr_Date_Cd__c</formula>
        <label>Lot Number / Date Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Claim_Management__c</fullName>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipLabel>MCARs</relationshipLabel>
        <relationshipName>MCAR_Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MCAR_No__c</fullName>
        <formula>MCARs__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCAR#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCARs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCARs</label>
        <referenceTo>MCAR__c</referenceTo>
        <relationshipName>MCAR_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <formula>MCARs__r.MCAR_Manufacturer__r.Name</formula>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mfg_Part_Number__c</fullName>
        <formula>MCARs__r.MCAR_Mfg_Part_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mfg. Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>MCARs__r.MCAR_Defect_Quantity__c</formula>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>MCARs__r.MCAR_Serial_No__c</formula>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <label>MCAR - Claim</label>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>MCAR - Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCAR - Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>